@@ -149,6 +149,7 @@ class WorkingTree4(WorkingTree3):
         self._dirstate = None
         self._inventory = None
         #-------------
+        self._after_opening()
 
     @needs_tree_write_lock
     def _add(self, files, ids, kinds):
